--- a/attendance-app/public/css/style.css
+++ b/attendance-app/public/css/style.css
@@ -1,21 +1,21 @@
-html{
-    font-family: sans-serif;  
+html {
+    font-family: sans-serif;
 }
 
-body > header {
+body>header {
     background-color: #236ab9;
     height: 130px;
     padding-top: 1rem;
     padding-bottom: 1rem;
 }
 
-body > header img {
+body>header img {
     float: left;
     margin: 0px 20px;
-    height:60px;
+    height: 60px;
 }
 
-body > header h1 {
+body>header h1 {
     color: white;
     font-family: sans-serif;
     font-size: 2rem;
@@ -24,7 +24,7 @@ body > header h1 {
 main h1 {
     font-size: 1.4rem;
     display: inline-block;
-    background-color: #236ab9;    
+    background-color: #236ab9;
     color: white;
     margin: 10px 0px;
     padding: .1em 1em;
@@ -43,7 +43,7 @@ table tr:nth-child(even) {
 }
 
 table th {
-    background-color: #236ab9;    
+    background-color: #236ab9;
     color: white;
     padding: 2px 10px;
 }
@@ -52,18 +52,18 @@ table td {
     padding: 2px 10px;
 }
 
-form{
+form {
     padding: 20px 20px;
     border: 2px solid black;
     width: 300px;
     display: inline-block;
 }
 
-div{
+div {
     padding: 20px;
 }
 
-form > p{
+form>p {
     margin: 3px;
 }
 
@@ -73,20 +73,24 @@ ul {
     padding: 0;
     overflow: hidden;
     background-color: #236ab9;
-  }
-  
-  li {
+}
+
+li {
     float: left;
-  }
-  
-  li a {
+}
+
+li a {
     display: block;
     color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-  }
-  
-  li a:hover {
+}
+
+li a:hover {
     background-color: rgb(62, 132, 190);
-  }
+}
+
+#error {
+    color: red;
+}
